Crash in "assert(_daemon_threads_count->get_value() > daemon_count) failed: thread count mismatch 5 : 5"

XMLWordPrintable

    • b16

        Latest jdk12 bits crashed with "Internal Error" in src/hotspot/share/services/threadService.cpp:177

        #
        # Internal Error (workspace/open/src/hotspot/share/services/threadService.cpp:167), pid=1616, tid=1695
        # assert(_daemon_threads_count->get_value() > daemon_count) failed: thread count mismatch 5 : 5
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0) (fastdebug build 12-internal+0-2019-02-05-2047083.ekaterina.pavlova.jdk.jdk12)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-2019-02-05-2047083.ekaterina.pavlova.jdk.jdk12, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x17ca632] ThreadService::remove_thread(JavaThread*, bool)+0x482
        #

        --------------- T H R E A D ---------------

        Current thread (0x00007fd5e86b1800): JavaThread "Thread-1" daemon [_thread_in_vm, id=1695, stack(0x00007fd5a8078000,0x00007fd5a8179000)]

        Stack: [0x00007fd5a8078000,0x00007fd5a8179000], sp=0x00007fd5a8177ae0, free space=1022k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x17ca632] ThreadService::remove_thread(JavaThread*, bool)+0x482
        V [libjvm.so+0x17b68d3] Threads::remove(JavaThread*)+0xf3
        V [libjvm.so+0x17be128] JavaThread::exit(bool, JavaThread::ExitType)+0x7d8
        V [libjvm.so+0x17be6a9] JavaThread::thread_main_inner()+0x149
        V [libjvm.so+0x17beafc] JavaThread::run()+0x1cc
        V [libjvm.so+0x17ba715] Thread::call_run()+0x75
        V [libjvm.so+0x14a41e6] thread_native_entry(Thread*)+0x106

              Assignee:
              David Holmes
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: